Updated Configurables, refactored package structure